@@ -1,43 +1,8 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>C++ Annotations</title>
-<style type="text/css">
-    body {color: #27408B; background: #FFFAF0;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
-</style>
-<link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
-</head>
-<body>
-<hr/>
-<h1 id="title">C++ Annotations</h1>
-<h2 id="author">cpp-annotations.10.7.0.tar.gz</h2>
-<h2 id="date">1994 - 2017</h2>
-
-<!DOCTYPE html><html><head>
-<meta charset="UTF-8">
-<style type="text/css">
-    body {color: #27408B; background: #FFFAF0;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
-</style>
-<link rev="made" href="mailto:Frank B. Brokken: f.b.brokken@rug.nl">
-</head>
-<body>
-<hr/>
-<h1 id="title"></h1>
-
-<!DOCTYPE html><html><head>
-<meta charset="UTF-8">
 <title>C++ Annotations(7)</title>
 <style type="text/css">
     body {color: #27408B; background: #FFFAF0;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
-    figure {text-align: center;}
-    img {vertical-align: center;}
     figure {text-align: center;}
     img {vertical-align: center;}
 </style>
@@ -46,7 +11,7 @@
 <body>
 <hr/>
 <h1 id="title">C++ Annotations(7)</h1>
-<h2 id="author">cpp-annotations.10.7.0.tar.gz C++ Annotations</h2>
+<h2 id="author">C++ Annotations<br/>(cpp-annotations.10.7.1.tar.gz)</h2>
 <h2 id="date">1994 - 2017</h2>
 
 
@@ -96,3 +61,5 @@ compressed forms (e.g., <em >cplusplus.txt.gz, cplusplus.html.zip</em>).
 <h2 >AUTHOR</h2>
     Frank B. Brokken (<strong >f.b.brokken@rug.nl</strong>).
 <p>
+</body>
+</html>
