@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>C++ Annotations Version 10.7.0</title>
+<title>C++ Annotations Version 10.7.1</title>
 <link rel="stylesheet" type="text/css" href="cplusplus.css">
 <style type="text/css">
     figure {text-align: center;}
@@ -10,7 +10,7 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">C++ Annotations Version 10.7.0</h1>
+<h1 id="title">C++ Annotations Version 10.7.1</h1>
 <h2 id="author">Frank B. Brokken</h2>
 
 <h2 id="affiliation"><div style="text-align: center">Center of Information Technology,<br/>
@@ -56,7 +56,7 @@ browsed at:
         <a href="mailto:f.b.brokken@rug.nl">Frank B. Brokken</a>.
 <p>
 <strong >Please</strong> state the document version you're referring to, as found in
-        the title (in this document: 10.7.0) and please state chapter and
+        the title (in this document: 10.7.1) and please state chapter and
         paragraph name or number you're referring to.
 <p>
 All received mail is processed conscientiously, and received
