@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title> C++ Annotations Version 10.7.0 </title>
+<title> C++ Annotations Version 10.7.1 </title>
 <link rel="stylesheet" type="text/css" href="cplusplus.css"><style type="text/css">
     figure {text-align: center;}
     img {vertical-align: center;}
@@ -37,7 +37,7 @@ by the <strong >C++</strong> Annotations, as these tokens occur extremely seldom
 code. In addition, <a name="an5"></a><em >trigraphs</em> (using <code >??&lt;</code> for <code >{</code>, and <code >??&gt;</code> for
 <code >}</code>) were removed from <strong >C++</strong> in the <a name="an6"></a>C++17 standard.
 <p>
-The version number of the <strong >C++</strong> Annotations (currently 10.7.0) is updated when
+The version number of the <strong >C++</strong> Annotations (currently 10.7.1) is updated when
 the contents of the document change. The first number is the major number, and
 is probably not going to change for some time: it indicates a major
 rewriting. The middle number is increased when new information is added to the
