@@ -1,6 +1,6 @@
 <!DOCTYPE html><html><head>
 <meta charset="UTF-8">
-<title>C++ Annotations V 10.7.0</title>
+<title>C++ Annotations V 10.7.1</title>
 <style type="text/css">
     .centered {margin:0px auto;display:block;}
     body {color: #27408B; background: #FFFAF0;}
@@ -11,7 +11,7 @@
 </head>
 <body>
 <hr/>
-<h1 id="title">C++ Annotations V 10.7.0</h1>
+<h1 id="title">C++ Annotations V 10.7.1</h1>
 <h2 id="author">Frank B. Brokken (f.b.brokken@rug.nl)<br/></h2>
 
 <h2 id="affiliation">Center for Information Technology, University of Groningen</h2><h2 id="date">1994 - 2017</h2>
@@ -33,6 +33,8 @@ by its tag or download the matching <code >.zip</code> or <code >.tar.gz</code> 
 release page):
 <p>
 <ul>
+        <li> <a href="https://github.com/fbb-git/cppannotations/releases/tag/10.7.1">10.7.1</a>
+Feb 04, 2017; 
         <li> <a href="https://github.com/fbb-git/cppannotations/releases/tag/10.7.0">10.7.0</a>
 Jan 28, 2017; 
         <li> <a href="https://github.com/fbb-git/cppannotations/releases/tag/10.6.0">10.6.0</a>
@@ -40,9 +42,7 @@ Oct 30, 2016;
         <li> <a href="https://github.com/fbb-git/cppannotations/releases/tag/10.5.1">10.5.1</a>
 Jul 24, 2016; 
         <li> <a href="https://github.com/fbb-git/cppannotations/releases/tag/10.5.0">10.5.0</a>
-Dec 23, 2015; 
-        <li> <a href="https://github.com/fbb-git/cppannotations/releases/tag/10.4.1-pre">10.4.1-pre</a>
-Dec 19, 2015.
+Dec 23, 2015.
         </ul>
     
 <p>
@@ -181,6 +181,5 @@ To clone the repository into <code >yodl</code>, use
 <hr>
 <p>
 Contact the author through <a href="mailto:f.b.brokken@rug.nl">his e-mail address</a>
-<p>
 </body>
 </html>
