@@ -36,6 +36,9 @@ lurl(https://github.com/fbb-git/_project_/releases) or direct from its
 release page):
 
         itemization(
+        it() url(10.7.1)
+                (https://github.com/fbb-git/_project_/releases/tag/10.7.1)
+Feb 04, 2017; 
         it() url(10.7.0)
                 (https://github.com/fbb-git/_project_/releases/tag/10.7.0)
 Jan 28, 2017; 
@@ -47,10 +50,7 @@ Oct 30, 2016;
 Jul 24, 2016; 
         it() url(10.5.0)
                 (https://github.com/fbb-git/_project_/releases/tag/10.5.0)
-Dec 23, 2015; 
-        it() url(10.4.1-pre)
-                (https://github.com/fbb-git/_project_/releases/tag/10.4.1-pre)
-Dec 19, 2015.
+Dec 23, 2015.
         )
     COMMENT(NOTE: LAST ITEM SHOULD END IN . )
 
@@ -67,7 +67,3 @@ Enjoy the _Product_! The document starts url(here)
 includefile(/home/frank/git/GITPROJECTS.yo)
 
 Contact the author through url(his e-mail address)(mailto:f.b.brokken@rug.nl)
-
-
-
-
