@@ -1,3 +1,13 @@
+C++-annotations (10.7.1)
+
+  * The section about implementing binary operators could somewhat be
+    simplified. Also, some additional clarifications were added.
+
+  * The SFINAE section was provided with explicit links to sections where the
+    sfinae principle is used.
+
+ -- Frank B. Brokken <f.b.brokken@rug.nl>  Sat, 04 Feb 2017 11:34:26 +0100
+
 C++-annotations (10.7.0)
 
   * The sections about implementing binary operators received an overhaul.
